--- a/package.json
+++ b/package.json
@@ -3,12 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/open-sans": "^5.0.17",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
+    "chakra-paginator": "^0.7.3",
+    "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
+    "firebase": "^10.6.0",
+    "framer-motion": "^10.16.5",
+    "ismobilejs": "^1.1.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^4.12.0",
+    "react-link-preview": "^0.1.3",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
+    "safe-json-stringify": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
