--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/react": "^1.1.2",
+    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/open-sans": "^5.0.17",
@@ -17,6 +17,7 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.6.0",
+    "framer-motion": "^10.16.12",
     "ismobilejs": "^1.1.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
